# hansard-tales

./: .claude-skills  .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  END_TO_END_TEST_FIXES_NEEDED.md  FAILING_TESTS_ANALYSIS.md  FINAL_TEST_STATUS.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  MVP_IMPLEMENTATION_CHECKLIST.md  PHASE_1_FIXES_SUMMARY.md  PHASE_2_PROGRESS.md  PHASE_3_ANALYSIS.md  PHASE_3_COMPLETE.md  PROGRESS_SUMMARY.md  PROPERTY_VS_UNIT_TESTING_ANALYSIS.md  PR_DESCRIPTION.md  PULL_REQUEST_DESCRIPTION.md  QUICKSTART.md  README.md  REMAINING_FAILURES_DETAILED_ANALYSIS.md  SCRAPER_DATE_FIX_SUMMARY.md  TASK_5_VERIFICATION_SUMMARY.md  TASK_6.1_SUMMARY.md  TEMPLATE_TESTS_FIX_SUMMARY.md  TEST_FIXES_COMPLETE_SUMMARY.md  TEST_GAP_ANALYSIS.md  TEST_INTEGRATION_SUMMARY.md  TEST_REFACTORING_STRATEGY.md  TEST_UPDATE_NEEDED.md  app.py  commit_msg.txt  docker-compose.yml  fix_remaining_tests.py  pyproject.toml  pytest.ini  requirements.txt  test_end_to_end_report.txt  (+4 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: pull_request_template.md
backup/: hansard.db
data/: .gitkeep  hansard.db  hansard.db.backup_20260127_145731  mps_12th_parliament.json  mps_13th_parliament.json
docs/: ARCHITECTURE.md  BUSINESS_STRATEGY.md  CLOUDFLARE_DEPLOYMENT_SETUP.md  CLOUDFLARE_MIGRATION_SUMMARY.md  CLOUDFLARE_SETUP.md  COMPLEMENTARY_TESTS_VERIFICATION.md  DATE_PARSING_GUIDE.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_OPTIONS_COMPARISON.md  DEVELOPMENT.md  DOWNLOAD_STATISTICS_FIX.md  FILENAME_FORMAT.md  GITHUB_ACTIONS_PR_FIX.md  IMPLEMENTATION_PLAN.md  MP_DATA_SCRAPING.md  PARLIAMENTARY_TERM_TRACKING.md  PDF_MIGRATION_GUIDE.md  PDF_MIGRATION_SUMMARY.md  PROJECT_DISCOVERY.md  QUICK_DEPLOYMENT_GUIDE.md  QUICK_REFERENCE_FORCE_AND_CLEAN.md  QUICK_START.md  REFACTORING_SUMMARY.md  SCRAPER_FIXES_SUMMARY.md  SCRAPER_IMPROVEMENTS.md  SCRAPER_IMPROVEMENTS_COMPLETE.md  SCRAPER_TESTS_SUMMARY.md  STORAGE_ABSTRACTION.md  TASK_6_COMPLETE.md  TASK_8.1_RESULTS.md  TASK_8.2_RESULTS.md  TASK_8.3_RESULTS.md  TASK_8.4_RESULTS.md  TASK_9.1_RESULTS.md  TESTING_PATTERNS.md  TESTING_STRATEGY.md  TEST_CALIBRATION_COMPLETE.md  TEST_REFACTORING_COMPLETE.md  TEST_REFACTORING_PLAN.md  TEST_REFACTORING_SUMMARY.md  (+1 more)
hansard_tales/: __init__.py  process_historical_data.py  (+2 more)
(+210 files in other folders)
