[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hansard-tales"
version = "0.1.0"
description = "Parliamentary transparency platform tracking Kenyan MPs through Hansard records"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Hansard Tales Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "Flask>=3.0.0",
    "Jinja2>=3.1.0",
    "pdfplumber>=0.10.0",
    "requests>=2.31.0",
    "spacy>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
hansard-scraper = "hansard_tales.scrapers.hansard_scraper:main"
hansard-mp-scraper = "hansard_tales.scrapers.mp_data_scraper:main"
hansard-pdf-processor = "hansard_tales.processors.pdf_processor:main"
hansard-mp-identifier = "hansard_tales.processors.mp_identifier:main"
hansard-bill-extractor = "hansard_tales.processors.bill_extractor:main"
hansard-init-db = "hansard_tales.database.init_db:main"
hansard-init-parliament = "hansard_tales.database.init_parliament_data:main"
hansard-import-mps = "hansard_tales.database.import_mps:main"
hansard-db-updater = "hansard_tales.database.db_updater:main"

[tool.setuptools]
packages = ["hansard_tales", "hansard_tales.scrapers", "hansard_tales.processors", "hansard_tales.database"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["hansard_tales"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
